--- a/app/src/main/res/layout-land/activity_winner.xml
+++ b/app/src/main/res/layout-land/activity_winner.xml
@@ -27,12 +27,13 @@
         android:id="@+id/button_text_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:text="@string/send_msg"
-        app:layout_constraintBottom_toTopOf="@+id/button_location"
+        app:layout_constraintBottom_toBottomOf="@+id/textPlainMessage"
         app:layout_constraintStart_toEndOf="@+id/textPlainMessage"
-        app:layout_constraintTop_toBottomOf="@+id/tv_display2" />
+        app:layout_constraintTop_toTopOf="@+id/textPlainMessage" />
+
 
     <EditText
         android:id="@+id/text_location"
@@ -40,34 +41,28 @@
         android:layout_height="33dp"
         android:layout_marginStart="117dp"
         android:layout_marginLeft="117dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="24dp"
         android:autofillHints=""
         android:background="@color/cardview_light_background"
         android:gravity="center_horizontal"
         android:hint="@string/search_for_location"
         android:inputType="textLongMessage"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/button_call"
         app:layout_constraintEnd_toStartOf="@+id/button_location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPlainMessage"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textPlainMessage" />
 
     <Button
 
         android:id="@+id/button_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:text="@string/search_location"
-        app:layout_constraintBottom_toTopOf="@+id/button_call"
+        app:layout_constraintBottom_toBottomOf="@+id/text_location"
         app:layout_constraintStart_toEndOf="@+id/text_location"
-        app:layout_constraintTop_toBottomOf="@+id/button_text_msg"
-        app:layout_constraintVertical_bias="0.137" />
+        app:layout_constraintTop_toTopOf="@+id/text_location" />
 
     <EditText
         android:id="@+id/textPlainMessage"
@@ -75,15 +70,13 @@
         android:layout_height="38dp"
         android:layout_marginStart="117dp"
         android:layout_marginLeft="117dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="52dp"
         android:autofillHints=""
         android:background="@color/cardview_light_background"
         android:gravity="center_horizontal"
         android:hint="@string/enter_message"
         android:inputType="text"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/text_location"
         app:layout_constraintEnd_toStartOf="@+id/button_text_msg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_display2" />
@@ -92,13 +85,12 @@
         android:id="@+id/button_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
         android:layout_marginBottom="32dp"
         android:text="@string/Make_call"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_location" />
-
+        app:layout_constraintStart_toEndOf="@+id/button_pic" />
 
     <TextView
         android:id="@+id/tv_display2"
@@ -111,7 +103,24 @@
         android:textSize="30sp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="271dp"
-        tools:layout_editor_absoluteY="60dp" />
+        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteY="57dp" />
+
+    <Button
+        android:id="@+id/button_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="172dp"
+        android:layout_marginLeft="172dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/btn_camera"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_call"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_location"
+        app:layout_constraintVertical_bias="1.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
