--- a/app/src/main/res/layout/activity_winner.xml
+++ b/app/src/main/res/layout/activity_winner.xml
@@ -24,18 +24,22 @@
 
     </RelativeLayout>
 
+
     <Button
         android:id="@+id/button_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="52dp"
         android:text="@string/Make_call"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_location" />
-
+        app:layout_constraintStart_toEndOf="@+id/button_pic"
+        app:layout_constraintTop_toBottomOf="@+id/button_location"
+        app:layout_constraintVertical_bias="0.493" />
 
     <Button
         android:id="@+id/button_text_msg"
@@ -71,19 +75,18 @@
         android:layout_height="33dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:autofillHints=""
+        android:layout_marginTop="8dp"
 
+        android:autofillHints=""
         android:background="@color/cardview_light_background"
         android:gravity="center_horizontal"
-        android:hint="@string/search_for_location"
 
+        android:hint="@string/search_for_location"
         android:inputType="textLongMessage"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/button_call"
         app:layout_constraintEnd_toStartOf="@+id/button_location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button_location"
-        app:layout_constraintVertical_bias="0.093" />
+        app:layout_constraintTop_toTopOf="@+id/button_location" />
 
     <EditText
         android:id="@+id/textPlainMessage"
@@ -124,5 +127,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="52dp"
+        android:text="@string/btn_camera"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_call"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_location"
+        app:layout_constraintVertical_bias="0.505" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
